# TextOp_A3

./: .gitignore  DATASET.md  LICENSE.md  README.md  USAGE.md
TextOpDeploy/src/textop_ctrl/: CMakeLists.txt
TextOpDeploy/src/textop_ctrl/config/: rmdar_config.yaml
TextOpDeploy/src/textop_ctrl/scripts/: rmdar.py
TextOpDeploy/src/textop_ctrl/src/: observation_computer.cpp  textop_onnx_controller.cpp
TextOpDeploy/src/unitree_mujoco/simulate/: CMakeLists.txt  config.yaml  package.xml
TextOpDeploy/src/unitree_mujoco/simulate/src/: physics_joystick.h  unitree_sdk2_bridge.h
TextOpRobotMDAR/robotmdar/train/: manager.py
TextOpTracker/scripts/: check_npz_format.py  deploy_mujoco.py  pkl_to_npz_A3.py  replay_npz.py
TextOpTracker/scripts/rsl_rl/: play.py  train.py  train_a3_full.sh  train_a3_minimal.sh
TextOpTracker/source/textop_tracker/textop_tracker/assets/agibot_a3/: __init__.py
TextOpTracker/source/textop_tracker/textop_tracker/assets/agibot_a3/meshes/: head_Link.STL  imu_in_pelvis_Link.STL  imu_in_torso_Link.STL  left_ankle_pitch_Link.STL  left_ankle_roll_Link.STL  left_elbow_Link.STL  left_hand_fist.STL  left_hand_palm_Link.STL  left_hip_pitch_Link.STL  left_hip_roll_Link.STL  left_hip_yaw_Link.STL  left_knee_Link.STL  left_shoulder_pitch_Link.STL  left_shoulder_roll_Link.STL  left_shoulder_yaw_Link.STL  left_wrist_pitch_Link.STL  left_wrist_roll_Link.STL  left_wrist_yaw_Link.STL  pelvis_link.STL  right_ankle_pitch_Link.STL  right_ankle_roll_Link.STL  right_elbow_Link.STL  right_hand_fist.STL  right_hand_palm_Link.STL  right_hip_pitch_Link.STL  right_hip_roll_Link.STL  right_hip_yaw_Link.STL  right_knee_Link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  right_shoulder_yaw_Link.STL  right_wrist_pitch_Link.STL  right_wrist_roll_Link.STL  right_wrist_yaw_Link.STL  torso_Link.STL  waist_roll_Link.STL  waist_yaw_Link.STL
TextOpTracker/source/textop_tracker/textop_tracker/assets/agibot_a3/urdf/: .asset_hash  TOOL_EXCEL_TO_URDF_JOINT.py  TOOL_EXCEL_TO_URDF_LINK1.py  a3_lite_contacts.urdf  agibot_a3.urdf  agibot_a3.usd  agibot_a3_normal.urdf  config.yaml  input_urdf_joint_2025-11-06.xlsx  input_urdf_link_2025-11-06.xlsx  joints.txt  mass.txt  mjmodel.xml
TextOpTracker/source/textop_tracker/textop_tracker/assets/agibot_a3/urdf/configuration/: agibot_a3_physics.usd  agibot_a3_sensor.usd
TextOpTracker/source/textop_tracker/textop_tracker/robots/: a3.py  actuator.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/: tracking_env_cfg.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/config/a3/: __init__.py  flat_env_cfg.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/config/a3/agents/: __init__.py  rsl_rl_ppo_cfg.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/mdp/: __init__.py  commands_multi.py  rewards.py  terminations.py
TextOpTracker/source/textop_tracker/textop_tracker/utils/: exporter.py  my_on_policy_runner.py
dataset/: process_retarget_data.py
